<resources>
    <string name="app_name">Nectar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">Orders</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="my_cart">My Cart</string>
    <string name="go_to_checkout">Go to Checkout</string>
    <string name="find_products">Find Products</string>
    <string name="search_store">Search Store</string>
    <string name="favourite">Favourite</string>
    <string name="add_all_to_cart">Add All To Cart</string>
    <string name="loging">Login</string>
    <string name="enter_your_login_and_password">Enter your login and password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="welcome_to_our_store">Welcome to our store</string>
    <string name="ger_your_groceries_in_as_fast_as_one_hour">Ger your groceries in as fast as one hour</string>
    <string name="get_started">Get Started</string>
    <string name="your_order_has_been_accepted">Your Order has been accepted</string>
    <string name="your_items_has_been_placcd_and_is_on_it_s_way_to_being_processed">Your items has been placcd and is on it’s way to being processed</string>
    <string name="back_to_home">Back to home</string>
    <string name="search_history">История поиска</string>
    <string name="enter_your_4_digit_code">Enter your 4-digit code</string>
    <string name="code">Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favourite_2">Favourite</string>
    <string name="account">Account</string>
    <string name="moscow_russia">Moscow, Russia</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="best_selling">Best Selling</string>
    <string name="categories">Categories</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="username">Username</string>
    <string name="login_2">Login</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy">By continuing you agree to our Terms of Service and Privacy Policy</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="all">All</string>
</resources>