<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_auth"
    tools:context=".ui.authorization.SignUpFragment">

    <ImageView
        android:id="@+id/img_1"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_carrot_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="26sp"
        android:fontFamily="@font/gilroy_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_1"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_credentials_to_continue"
        android:textSize="16sp"
        android:fontFamily="@font/gilroy_medium"
        app:layout_constraintStart_toStartOf="@id/tv_1"
        app:layout_constraintTop_toBottomOf="@id/tv_1"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="16sp"
        android:fontFamily="@font/gilroy_semibold"
        app:layout_constraintStart_toStartOf="@id/tv_1"
        app:layout_constraintTop_toBottomOf="@id/tv_2"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:text="maks"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_8" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_2"
        android:textSize="16sp"
        android:fontFamily="@font/gilroy_semibold"
        app:layout_constraintStart_toStartOf="@id/tv_1"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/et_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="Login"
        android:text="maks"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_3" />

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:fontFamily="@font/gilroy_semibold"
        app:layout_constraintStart_toStartOf="@id/tv_1"
        app:layout_constraintTop_toBottomOf="@id/et_login"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:text="123456"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_4" />

    <TextView
        android:id="@+id/tv_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy"
        android:textSize="14sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/gilroy_medium"
        app:layout_constraintEnd_toEndOf="parent"
        android:lineHeight="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="353dp"
        android:layout_height="67dp"
        android:layout_marginBottom="110dp"
        android:fontFamily="@font/gilroy_semibold"
        android:text="@string/sign_up_2"
        android:textColor="@color/white_4"
        android:textSize="18sp"
        app:cornerRadius="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="14sp"
            android:fontFamily="@font/gilroy_semibold" />
        <TextView
            android:id="@+id/tv_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="14sp"
            android:layout_marginStart="4dp"
            android:textColor="@color/green"
            android:fontFamily="@font/gilroy_semibold" />
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>