<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.OnBoardingFragment"
    android:background="@drawable/onboarding"

    >
    <!--    android:background="@drawable/onboarding"-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginTop="31dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/gilroy_semibold"
        android:gravity="center"
        android:text="@string/welcome_to_our_store"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:alpha="0.7"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center"
        android:text="@string/ger_your_groceries_in_as_fast_as_one_hour"
        android:textColor="@color/white_2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        android:layout_width="353dp"
        android:layout_height="67dp"
        android:layout_marginTop="41dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/gilroy_semibold"
        android:text="@string/get_started"
        android:textColor="@color/white_4"
        android:textSize="18sp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>