<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.shop.ShopFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pb_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/img_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:src="@drawable/ic_carrot_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/container_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_geo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/moscow_russia"
                android:textSize="18sp" />
        </LinearLayout>


        <!-- ViewPager2 для баннеров -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/bannerViewPager"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_1" />

        <!-- Индикатор (точки) -->
        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dotsIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:dotsColor="@android:color/darker_gray"
            app:dotsSpacing="2dp"
            app:dotsSize="10dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@id/bannerViewPager"
            app:layout_constraintEnd_toEndOf="@id/bannerViewPager"
            app:layout_constraintStart_toStartOf="@id/bannerViewPager"
            app:selectedDotColor="@color/md_theme_primary" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/gilroy_semibold"
            android:paddingStart="16dp"
            android:text="@string/exclusive_offer"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bannerViewPager" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_exclusive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilroy_semibold"
            android:paddingStart="16dp"
            android:text="@string/best_selling"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_exclusive" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_best_selling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilroy_semibold"
            android:paddingStart="16dp"
            android:text="@string/all"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_best_selling" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp"
            app:layout_constraintBottom_toTopOf="@+id/v_helper_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <View
            android:id="@+id/v_helper_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>